testdata/e2e/examples/proxy/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: proxy
spec:
  skip: true
  steps:
  - try:
    - proxy:
        apiVersion: v1
        kind: Service
        namespace: kyverno
        name: kyverno-svc-metrics
        port: metrics-port
        path: /metrics
        outputs:
        - name: metrics
          value: (json_parse(to_string(x_metrics_decode($stdout))))
    # - script:
    #     env:
    #     - name: TT
    #       value: (to_string($metrics[?metric.__name__=='promhttp_metric_handler_requests_total']))
    #     content: echo $TT
    # - assert:
    #     resource:
    #       ($metrics[?metric.code == '500'].value[1]):
    #       - '0'
